<resources>
    <string name="app_name">To Do</string>

    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="enter_mobile_no">Enter Mobile No</string>
    <string name="login">Login</string>
    <string name="create_new_account_click_here">Create New Account?Click Here</string>


    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="update_profile">Update Profile</string>
    <string name="show_profile">Show Profile</string>
    <string name="send">Send</string>
    <string name="log_out">Log Out</string>
    <string name="already_have_account_click_here">Already have Account ? Click Here</string>
    <string name="registration">Registration</string>
    <string name="see_task_lists">See Task Lists</string>
    <string name="communicate">Communicate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="profile_details">Profile Details</string>
    <string name="dummyemail">ayush@gmail.com</string>
    <string name="ayush_verma">Ayush Verma</string>
    <string name="dummy_phone">9667495330</string>
    <string name="update">Update</string>
    <string name="dummy_password">Password</string>
    <string name="no_task_found">No Task Found</string>
    <string name="cancel">Cancel</string>
    <string name="enter_task_details">Enter Task Details</string>
    <string name="select_time">Select Time</string>
    <string name="select_date">Select Date</string>
    <string name="add_task">Add Task</string>
    <string name="ok">Ok</string>
    <string name="delete">Delete</string>
    <string name="update_task_details">Update Task Details</string>
    <string name="update_task">Update Task</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
</resources>
