<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bggradient"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="10dp"
        android:text="@string/update_task"
        android:textAlignment="center"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edittextTask"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittextbg"
        android:clickable="true"
        android:focusable="true"
        android:gravity="top|left"
        android:hint="@string/update_task_details"
        android:padding="10dp"
        android:textSize="15sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/buttoncancel"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20sp"
            android:background="@drawable/buttonbg"
            android:text="@string/cancel"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/buttonok"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20sp"
            android:background="@drawable/buttonbg"
            android:text="@string/ok"
            android:textAllCaps="false" />
    </RelativeLayout>

</LinearLayout>