<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signuplayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/bggradient"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edittextname"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittextbg"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_perm_identity_black_24dp"
            android:fontFamily="sans-serif"
            android:hint="@string/enter_name"
            android:padding="10dp" />

        <EditText
            android:id="@+id/edittextemail"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittextbg"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:fontFamily="sans-serif"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <EditText
            android:id="@+id/edittextphone"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittextbg"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_phone_black_24dp"
            android:fontFamily="sans-serif"
            android:hint="@string/enter_mobile_no"
            android:inputType="phone"
            android:padding="10dp" />

        <EditText
            android:id="@+id/edittextpassword"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittextbg"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp"
            android:fontFamily="sans-serif"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <EditText
            android:id="@+id/edittextconfirmpassword"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittextbg"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp"
            android:fontFamily="sans-serif"
            android:hint="@string/enter_confirm_password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <Button
            android:id="@+id/buttonregistration"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/buttonbg"
            android:fontFamily="sans-serif"
            android:text="@string/registration"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/buttonLogin"
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:fontFamily="sans-serif"
            android:padding="8dp"
            android:text="@string/already_have_account_click_here"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="normal" />

    </LinearLayout>
</ScrollView>
