<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bggradient"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edittextemail"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="160dp"
            android:background="@drawable/edittextbg"
            android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_perm_identity_black_24dp"
            android:fontFamily="sans-serif"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/edittextpassword"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittextbg"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp"
            android:fontFamily="sans-serif"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="17sp" />

        <Button
            android:id="@+id/buttonlogin"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="130dp"
            android:layout_marginRight="130dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/buttonbg"
            android:text="@string/login"
            android:textAllCaps="false" />

        <TextView

            android:id="@+id/signuptextview"
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:fontFamily="sans-serif"
            android:padding="8dp"
            android:text="@string/create_new_account_click_here"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="normal" />
    </LinearLayout>
</ScrollView>